* Only support MySQL 5.7 GA client libraries
* Remove support for MySQL Connector/C 6.0.x
* Cleanup ifdef's for pre-5.7 MySQL
* Cleanup ifdef's for MySQL 4.x and earlier
* Remove MySQL Embedded support (libmysqld)
* Replace my_bool with bool
* Remove MySQL Fabric support

2018-10-25 Daniël van Eeden, Patrick Galbraith,
DBI/DBD community (4.050)
* Fix SQL syntax for statements that have "...limit = ?" #288
* Make tests pass on MySQL 4.1 #286
* Travis-CI: Install Test::Deep #281
* Fix undefined ssl_verify_set on MySQL 5.0 and before #283
* Fix compilation on MySQL 4.1 #283
* Move Travis to dbdeployer (#284) #284
* Fix compiling on 8.0.0 and 8.0.1 #285
* Fix compatibility with MariaDB 10.3 #291

2018-10-25 Daniël van Eeden, Patrick Galbraith,
DBI/DBD community (4.049)
* Fix MariaDB issue #262 
* Various fixes for travis builds
* Fix to issue 187: Don't declare enum_type as static
* Fix regex for removing database from DSN again
* Allow to call $sth->mysql_async_ready and $sth->mysql_async_result more times without discarding result state 201

2018-09-15 Daniël van Eeden, Patrick Galbraith, Michiel Beijen,
DBI/DBD community (4.048)
* Fix corrupted META.json so cpan installations work as expected.
   https://github.com/perl5-dbi/DBD-mysql/issues/263

2018-09-08 Daniël van Eeden, Patrick Galbraith, DBI/DBD community (4.047)
* Add options needed for public key based security.
* Allow several spaces after LIMIT clause.
* Basic GTID tracking.
* Fix GCC 8.1 warnings
* Fix warning: unused variable ‘buffer_len’
* Fix warning about bind->is_null assignment with incompatible pointer type
* Get rid of warning about unused variable ssl_verify_set
* Fix space/tab issue which leads to misleading indentation
* Change spaces/tabs to get rid of GCC8 warning

2018-03-09 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.046_01)
* Updated documentation re. multithreading (Daniël van Eeden)
* Remove #IFDEFs for code detecting ancient DBI versions. The minimum